--- a/app/build.gradle
+++ b/app/build.gradle
@@ -30,6 +30,7 @@ android {
 
 dependencies {
     implementation fileTree(include: ['*.jar', '*.aar'], dir: 'libs')
+    implementation 'com.google.android.gms:play-services-location:21.0.1'
     implementation libs.appcompat
     implementation libs.material
     implementation libs.activity
